estruturando a Intro e adicionando sections.css

--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
 
 </head>
 <body>
-  
+  <section #intro>
+    <img src="./assets/imgs/avatar.png" alt="foto de perfil">
+
+    <p style="font: var(--subtitle);">Hello world! Meu nome é <span style="color: var(--red);">Martina Santos</span> e sou</p>
+
+    <h1>Desenvolvedora Fullstack</h1>
+
+    <p style="font: var(--text-sm);">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+
+    <div #alltags>
+     <div style="font: var(--text-md);"> <img src="./assets/icons/GitHub.svg" alt="Github"> GitHub </div>
+
+     <div style="font: var(--text-md);"> <img src="./assets/icons/HTML.svg" alt="htmlicon"> HTML</div>
+
+     <div style="font: var(--text-md);"><img src="./assets/icons/CSS.svg" alt="cssicon">CSS</div>
+
+     <div style="font: var(--text-md);"> <img src="./assets/icons/JavaScript.svg" alt="desisto">Javascript</div>
+
+     <div style="font: var(--text-md);"><img src="./assets/icons/React.svg" alt="">React</div>
+
+     <div style="font: var(--text-md);"><img src="./assets/icons/Node.js.svg" alt="">Node.js </div>
+    </div>
+
+    <img src="./assets/icons/CaretDoubleDown.svg" alt="">
+  </section>
 </body>
 </html>
