--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-  <section #intro>
+  <section id="intro">
     <img src="./assets/imgs/avatar.png" alt="foto de perfil">
 
     <p style="font: var(--subtitle);">Hello world! Meu nome é <span style="color: var(--red);">Martina Santos</span> e sou</p>
@@ -33,7 +33,7 @@
 
     <p style="font: var(--text-sm);">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
 
-    <div #alltags>
+    <div id="alltags">
      <div style="font: var(--text-md);"> <img src="./assets/icons/GitHub.svg" alt="Github"> GitHub </div>
 
      <div style="font: var(--text-md);"> <img src="./assets/icons/HTML.svg" alt="htmlicon"> HTML</div>
